--- a/home.html
+++ b/home.html
@@ -18,16 +18,46 @@
             <h3 class="logo"><span id="color"> LOGO</span></h3>
             <a href="https://www.google.com/search?q=google+link&oq"><button class="pr">Sign Up </button></a>
             </nav>
-<div class="abba">
-<p>Cool Dark UI Template for<br>
-     Webflow Agencies!</p>
-<button class="pr"> Stay Focaused</button>
-    
-
-</div>
-        
-    </header>
+            <div class="abba">
+               <p>Cool Dark UI Template for<br>
+                    Webflow Agencies!
+              </p>
+                    <button class="pr"> Stay Focaused
+                    </button>
+            </div>
+        </header>
     <main>
+        <div class="dadu">
+            <div class="bhai">
+            <p> <h1>See It in Action</h1>
+            Explore the live preview and imagine your <br>
+             in this bold new look.
+            <br>
+            <button class="pr">Launch Live Preview </button>
+            </p>
+            </div>
+            <div class="bon">
+                <img src="wc-mini.png" >
+            </div>
+        </div>
+<div class="D">
+    <div class="stats-wrapper">
+    <h2>Joined Thousands of Productive Users</h2>
+    <div class="stats-container">
+      <div class="stat-box">
+        <h3 class="stat-number">50K</h3>
+        <p class="stat-label">Active Users</p>
+      </div>
+      <div class="stat-box">
+        <h3 class="stat-number">2M+</h3>
+        <p class="stat-label">Focus Sessions</p>
+      </div>
+      <div class="stat-box">
+        <h3 class="stat-number">95%</h3>
+        <p class="stat-label">Satisfaction Rate</p>
+      </div>
+    </div>
+</div>
 
     </main>
     <footer>
