--- a/home.html
+++ b/home.html
@@ -59,6 +59,15 @@
     </div>
 </div>
 
+ <div class=" tb"></div>
+    <h1>Ready to focus better</h1>
+    <p>This template instantly leveled up our presence</p>
+    
+    <button class="pr"> Get Started Free</button>
+    <p class="two">
+    <img src="wc-big.png"></p>
+ </div>
+
     </main>
     <footer>
 
