--- a/home.html
+++ b/home.html
@@ -59,14 +59,14 @@
     </div>
 </div>
 
- <div class=" tb"></div>
+ <div class="container">
     <h1>Ready to focus better</h1>
-    <p>This template instantly leveled up our presence</p>
-    
-    <button class="pr"> Get Started Free</button>
-    <p class="two">
-    <img src="wc-big.png"></p>
- </div>
+    <p>This template instantly leveled up our presence. ~ Studio Vertex</p>
+    <div class="image-box">
+      <img src="wc-big.png" alt="Conference Image">
+      <button>Get Started Free</button>
+    </div>
+  </div>
 
     </main>
     <footer>
