update all commit

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="home.css">
+<link rel="icon" href="icon-star.png" type="image/x-icon">
 
 </head>
 <body>
@@ -67,9 +68,45 @@
       <button>Get Started Free</button>
     </div>
   </div>
+<div class="zini">
+  <section class="container">
+        <div class="contact-text">
+            Let’s Get in<br>Touch
+        </div>
+        <div class="form-container">
+            <form>
+                <label for="">Email</label>
+                <input type="email" placeholder="example@email.com" required>
+                <label for="">Name</label>
+                <input type="text" placeholder="full name" required>
+                <label for="">Message</label>
+                <textarea placeholder="write your message..." rows="4" required></textarea>
+                <button type="submit">Get in Touch</button>
+            </form>
+        </div>
+    </section>
 
+</div>
     </main>
     <footer>
+<div class="footer-container">
+            <div>
+                <h1>LOGO</h1>
+            </div>
+            <div>
+                <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we
+                    can bring your vision to life.</p>
+            </div>
+            <div>
+                <nav>
+                    <a href="https://www.facebook.com/profile.php?id=61558730841355">Home</a>
+                    <a href="https://www.youtube.com/@ProgrammingHeroCommunity">About</a>
+                    <a href="https://youtu.be/ok-plXXHlWw?si=PZlS9i5_me_0S6t0">How It Works</a>
+                    <a href="https://youtube.com/shorts/4burI97HWCU?si=JTJ5086l2MwDAP7x">Services</a>
+                </nav>
+            </div>
+
+        </div>
 
     </footer>
 
